# notebook_style.nvim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  example_config.lua  manual_render_example.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
core/: Cargo.toml  THIRD_PARTY_NOTICES.md
core/src/: kernel.rs  kernelspec.rs  kitty.rs  main.rs  notebook.rs  protocol.rs  rpc.rs  session.rs
doc/: notebook_style.txt
lua/notebook_style/: cells.lua  config.lua  exec.lua  health.lua  image.lua  init.lua  install.lua  output_view.lua  render.lua  rpc.lua  state.lua
plugin/: notebook_style.lua
tests/: lua_smoke.lua  run_all.sh
